@@ -77,7 +77,10 @@ using KJS::SavedProperties;
     if (document) {
         KHTMLView *view = document->view();
 
-        ASSERT (view);
+        // FIXME: We see evidence that view is nil in backtraces
+        // from the field. So we know this assert would sometimes fire.
+        // We check for nil below anyway until we figure out the cause.
+        ASSERT(view);
         
         KWQKHTMLPart::clearTimers(view);
 
@@ -85,8 +88,10 @@ using KJS::SavedProperties;
         document->detach();
         document->deref();
         
-        view->clearPart();
-        delete view;
+        if (view) {
+            view->clearPart();
+            delete view;
+        }
     }
     
     delete URL;
