@@ -1,3 +1,12 @@
+2003-01-01  Darin Adler  <darin@apple.com>
+
+        Reviewed by Don.
+
+	- fixed 3137566 -- non-reproducible nil-dereference in KHTMLView::clearPart
+	deallocating KWQPageState
+
+        * kwq/KWQPageState.mm: (-[KWQPageState dealloc]): Add nil check.
+
 2003-01-01  David Hyatt  <hyatt@apple.com>
 
 	Fix tables so that malformations inside them are properly pulled
